# chatfs

./: .gitignore  Cargo.toml  INSTALLATION.md  LICENCE.md  PROMPT.md  README.md
.github/workflows/: release.yml
src/: data.rs  ignore.rs  ignorefile.rs  lib.rs  logger.rs  main.rs  messagetypes.rs  path_guards.rs  replytypes.rs
src/cli/: interface.rs  mod.rs  types.rs
src/cli_handler/: cli_handler.rs  cli_types.rs  mod.rs
src/config/: config_path.rs  data_dir.rs  loader.rs  manager.rs  mod.rs  types.rs
src/connection/: handlers.rs  mod.rs  socket.rs  types.rs
src/core/: executor.rs  mod.rs  types.rs
src/core/operations/: content.rs  copy.rs  create.rs  delete.rs  list.rs  mod.rs  mv.rs  prompt.rs  write.rs
src/core/utils/: mod.rs  parse_lines.rs  safe_lines.rs  safe_path.rs
src/core/validators/: content.rs  copy_move.rs  create.rs  delete.rs  list.rs  mod.rs  write.rs
src/core/validators/utils/: ignore_file.rs  mod.rs  parse_lines.rs  safe_path.rs
src/fs/: ignore.rs  mod.rs  safe_path.rs
src/fs/operations/: content.rs  copy.rs  create.rs  delete.rs  list.rs  mod.rs  mv.rs  write.rs
src/message_handler/: message_handler.rs  message_handlers.rs  message_types.rs  mod.rs  reply_types.rs  socket_loop.rs
src/operations/: content.rs  copy.rs  create.rs  delete.rs  list.rs  mod.rs  mv.rs  write.rs
src/path_validation/: data_dir.rs  ignore_rules.rs  mod.rs  operational_path.rs
src/tool_config/: config.rs  mod.rs
src/transport/: handlers.rs  socket.rs  types.rs
src/utils/: logger.rs
