[package]
name = "querysync"
version = "0.1.0"
edition = "2024"

[dependencies]
ignore = "0.4.25"
rustls = { version = "0.23.37", features = ["ring"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tungstenite = { version = "0.29.0", features = ["rustls-tls-native-roots"] }
