[package]
name = "chatfs"
version = "0.2.1"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
directories = "6.0.0"
dotenv = "0.15.0"
ignore = "0.4.25"
regex = "1.12.3"
rustls = { version = "0.23.37", features = ["ring"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tungstenite = { version = "0.29.0", features = ["rustls-tls-native-roots"] }
